--- a/bdd_example/Gemfile
+++ b/bdd_example/Gemfile
@@ -3,5 +3,5 @@ source 'https://rubygems.org'
 gem 'cucumber'
 gem 'rspec'
 gem 'rake'
-gem 'page-object', '~> 2.0'
+gem 'page-object'
 gem 'data_magic'
